# django-slack-simple-app

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml
django_simple_slack_app/: __init__.py  admin.py  apps.py  decorators.py  emitter.py  info_cache.py  models.py  urls.py  views.py
django_simple_slack_app/migrations/: 0001_initial.py  0002_auto_20211128_1214.py
django_slack_app/: __init__.py  admin.py  apps.py  emitter.py  models.py  urls.py  views.py
django_slack_app/migrations/: 0001_initial.py  0002_auto_20200315_0718.py
django_slack_app/templates/django_slack_app/: oauth_done.html
examples/my_slack_app/: asgi.py  models.py  settings.py  slack_commands.py  slack_events.py  urls.py  wsgi.py
examples/my_slack_app/migrations/: 0001_initial.py
my_slack_app/: models.py  settings.py  slack_events.py  urls.py
papago_slack/: asgi.py  papago.py  settings.py  slack_events.py  urls.py  wsgi.py
